Make `ReplacementException` non-private